--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="strip">
+        </div>
+        <div class="avatar">
+            <img src="./img/avatar.png" alt="avatar_minko"/>
+        </div>
+        <section>
+            <h1>Stanislav Minko</h1>
+        </section>
+        <section>
+            <h3>front-end trainee</h3>
+        </section>
+    </header>
+    <main>
+        <section class="section-left">
+            <h2>Summary</h2>
+            <p>
+                Searching for an entry-level position as front-end developer. For 3 years I was working in a notary chamber as an consultant. Currently working as administrator in the bar.
+            </p>
+            <h2>Skills</h2>
+            General knowledge of programming on Asp.NET, WPF Frameworks, basics of DataBase design, computer networks, basic knowledge about cloud Computing, QA and software development, Git.
+            <h2>Level of English:</h2>
+            B1
+            <h2>Sample code</h2>
+                <ul>javascript:
+                    <li>* Returns an area of a rectangle given by width and heigth.</li>
+                    <li>* @param {numder} width</li>
+                    <li>* @param {number} height</li>
+                    <li>* @return {number}</li>
+                    <li>*</li>
+                    <li>* @example:</li>
+                    <li>*   5, 10 => 50</li>
+                    <li>*   5, 5  => 25</li>
+                    <li>function getRectangleArea(width, height) {</li>
+                    <li>return width * height;</li>
+                    <li>}</li>
+                </ul>     
+            <h2>Contacts:</h2>
+            <ul>
+                <li>phone: +375297756871</li>
+                <li>e-mail: minkostas@gmail.com</li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/minko-stanislav-807072131">minko-stanislav-807072131</a></li>
+            </ul>
+        </section>
+        <section class="section-right">
+            <h2>Work experience</h2>
+            Studying html, css, js in free time, performing laboratory work while studying at the university, internship in AIS company on front-end.
+            <h2>Education</h2>
+            <ul>
+                <li>- Minsk Institute of Management 2014 </li>
+                <li>- Belarusian University of Informatics and Radioelectronics 2019</li>
+            </ul>
+        </section>
+    </main>
     
 </body>
 </html>
