feat: add avatar, footer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             </ul>
         </section>
     </main>
-    
+    <footer>
+        <a href="https://github.com/StanislavM31">StanislavM31</a>
+        <p>2021</p>
+        <div class="logo">
+            <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="RollingScopes"></a>
+        </div>
+        
+    </footer>
 </body>
 </html>
