refactor: tag img close

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="strip">
         </div>
         <div class="avatar">
-            <img src="./img/avatar.png" alt="avatar_minko"/>
+            <img src="./img/avatar.png" alt="avatar_minko">
         </div>
         <section>
             <h1>Stanislav Minko</h1>
