--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             Studying html, css, js in free time, performing laboratory work while studying at the university, internship in AIS company on front-end.
             <h2>Education</h2>
             <ul>
-                <li>- Minsk Institute of Management 2014 </li>
-                <li>- Belarusian University of Informatics and Radioelectronics 2019</li>
+                <li>- Minsk Institute of Management '2014 </li>
+                <li>- Belarusian University of Informatics and Radioelectronics '2019</li>
             </ul>
         </section>
     </main>
@@ -68,7 +68,7 @@
         <div class="logo">
             <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="RollingScopes"></a>
         </div>
-        
+
     </footer>
 </body>
 </html>
